# Interact-VectorEmbedding

./: README.md  api.py  config.py  embedding.py  emotion_classifier.py  keywords.py  main.py  pyproject.toml  rule_based_emotion.py
